[package]
name = "fedimint-threshold-crypto"
# REMINDER: Update version in `README.md` when incrementing:
version = "0.1.1"
authors = [
    "Vladimir Komendantskiy <komendantsky@gmail.com>",
    "Andreas Fackler <AndreasFackler@gmx.de>",
    "Peter van Nostrand <jnz@riseup.net>",
    "Andrew Gross <andogro@gmail.com>",
    "Nick Sanders <nsan1129@gmail.com>",
    "Marc Brinkmann <git@marcbrinkmann.de>",
]
categories = ["cryptography"]
keywords = ["pairing", "threshold"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/poanetwork/threshold_crypto"
description = "Pairing threshold cryptography (Fedimint fork)"
edition = "2018"

[dependencies]
bls12_381 = { version = "0.8.0", features = [ "zeroize", "groups" ] }
byteorder = "1.5.0"
ff = "0.13.0"
group = "0.13.0"
hex_fmt = "0.3.0"
log = "0.4.21"
pairing = "0.23.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.199", features = ["derive"] }
subtle = "2.5.0"
thiserror = "1.0.59"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
zeroize = "1.7.0"

# optional
bincode = { version = "1.2.1", optional = true }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
bincode = "1.2.1"
criterion = "0.3.1"
rand_xorshift = "0.2.0"
serde_json = "1.0.82"

[[bench]]
name = "bench"
harness = false

[features]
use-insecure-test-only-mock-crypto = []
codec-support = ["codec", "bincode"]
